<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmento_form3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form_curso.CursoFormPart2Fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CursoForm_3Activity"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="105dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="24dp"
            android:text="@string/form3"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="175dp"
            android:layout_marginStart="27dp"
            android:text="@string/form3_sub1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.39" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1" />

        <CheckBox
            android:id="@+id/cbxLunes"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="true"
            android:checked="false"
            android:text="@string/lunes"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tInit_lunes"
            android:text="@string/h_inicio"
            app:layout_constraintBottom_toTopOf="@+id/tInit_lunes"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tEnd_lunes"
            android:text="@string/h_fin"
            app:layout_constraintBottom_toTopOf="@+id/tEnd_lunes"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tEnd_lunes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tInit_lunes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <CheckBox
            android:id="@+id/cbxMartes"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="true"
            android:checked="false"
            android:text="@string/martes"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tInit_martes"
            android:text="@string/h_inicio"
            app:layout_constraintBottom_toTopOf="@+id/tInit_martes"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tEnd_martes"
            android:text="@string/h_fin"
            app:layout_constraintBottom_toTopOf="@+id/tEnd_martes"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tInit_martes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <EditText
            android:id="@+id/tEnd_martes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <CheckBox
            android:id="@+id/cbxMiercoles"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="true"
            android:checked="false"
            android:text="@string/miercoles"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline15"
            app:layout_constraintStart_toEndOf="@+id/guideline8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tInit_miercoles"
            android:text="@string/h_inicio"
            app:layout_constraintBottom_toTopOf="@+id/tInit_miercoles"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tEnd_miercoles"
            android:text="@string/h_fin"
            app:layout_constraintBottom_toTopOf="@+id/tEnd_miercoles"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tInit_miercoles"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline15"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <EditText
            android:id="@+id/tEnd_miercoles"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline15"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <CheckBox
            android:id="@+id/cbxJueves"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="true"
            android:checked="false"
            android:text="@string/jueves"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tInit_jueves"
            android:text="@string/h_inicio"
            app:layout_constraintBottom_toTopOf="@+id/tInit_jueves"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tEnd_jueves"
            android:text="@string/h_fin"
            app:layout_constraintBottom_toTopOf="@+id/tEnd_jueves"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tInit_jueves"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <EditText
            android:id="@+id/tEnd_jueves"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <CheckBox
            android:id="@+id/cbxViernes"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="true"
            android:checked="false"
            android:text="@string/viernes"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintStart_toStartOf="@+id/guideline8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tInit_viernes"
            android:text="@string/h_inicio"
            app:layout_constraintBottom_toTopOf="@+id/tInit_viernes"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tEnd_viernes"
            android:text="@string/h_fin"
            app:layout_constraintBottom_toTopOf="@+id/tEnd_viernes"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <EditText
            android:id="@+id/tInit_viernes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintStart_toEndOf="@+id/guideline10" />

        <EditText
            android:id="@+id/tEnd_viernes"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintStart_toEndOf="@+id/guideline11" />

        <TextView
            android:id="@+id/diasSemana"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/badge"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>